--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"expo": "^23.0.0",
 		"react": "16.0.0-alpha.6",
 		"react-native": "^0.44.0",
+		"react-native-device-info": "^0.12.1",
 		"react-native-elements": "^0.18.2",
 		"react-native-linear-gradient": "^2.3.0",
 		"react-native-router-flux": "^4.0.0-beta.24",
