--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@expo/ex-navigation": "^4.0.0",
+		"babel-preset-react-native-stage-0": "^1.0.1",
 		"expo": "^23.0.0",
+		"native-base": "^2.3.3",
 		"react": "16.0.0-alpha.6",
 		"react-native": "^0.44.0",
 		"react-native-device-info": "^0.12.1",
