--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-native-device-info": "^0.12.1",
 		"react-native-elements": "^0.18.2",
 		"react-native-linear-gradient": "^2.3.0",
+		"react-native-navigation": "^1.1.298",
 		"react-native-router-flux": "^4.0.0-beta.24",
 		"react-navigation": "^1.0.0-beta.19",
 		"react-navigator": "0.0.0-0"
